<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@drawable/aadhaar_logo"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/aadhaar_logo"
        android:layout_marginTop="30dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">


        <EditText
            android:id="@+id/enterUIDUrbanLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enter_aadhaar_number"
            android:autofillHints="@string/enter_aadhaar_number"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/otpMobileUrbanLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_otp_sent_to_registered_mobile"
            android:autofillHints="@string/enter_otp_sent_to_registered_mobile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/enterUIDUrbanLogin"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/verifyUrbanLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:layout_below="@+id/otpMobileUrbanLogin"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

    </RelativeLayout>

</RelativeLayout>