<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/newAddressUpdateRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_address_update_request"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/sentAddressUpdateRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending_address_update_sent"
            android:layout_below="@+id/newAddressUpdateRequest"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/pendingAddressUpdateRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending_address_update_request"
            android:layout_below="@+id/sentAddressUpdateRequest"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</RelativeLayout>